--- a/templates/pages/list_join.html
+++ b/templates/pages/list_join.html
@@ -27,8 +27,8 @@
                     List
                     {% endif %}
                 </h1>
-                <h2 style="font-size: 16pt">/{{dict_chan_info["label"]|safe}}/ - {{dict_chan_info["description"]|safe}}</h2>
-                <h4>{{join_address}}</h4>
+                <h2 class="themed" style="font-size: 16pt">/{{dict_chan_info["label"]|safe}}/ - {{dict_chan_info["description"]|safe}}</h2>
+                <h4 class="themed">{{join_address}}</h4>
                 <p class="themed" style="padding: 0.5em; max-width: 550px">Edit any PGP passphrases for this {{dict_chan_info["type"]}} below before joining.</p>
             </div>
             <div class="themed" style="padding-top: 0.5em">
