--- a/templates/elements/board/form_post_options_formatting.html
+++ b/templates/elements/board/form_post_options_formatting.html
@@ -1,32 +1,32 @@
 <div class="content" style="word-wrap: break-word;">
-    <button type="button" title="[@@]...[/@@]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '@@', '@@');">Bold</button>
-    <button type="button" title="[~~]...[/~~]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '~~', '~~');">Italic</button>
-    <button type="button" title="[__]...[/__]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '__', '__');">Underline</button>
-    <button type="button" title="[^s]...[/^s]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '^s', '^s');">Shadow</button>
-    <button type="button" title="[++]...[/++]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '++', '++');">Strike</button>
-    <button type="button" title="[``]...[/``]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '``', '``');">Mark</button>
-    <button type="button" title="[^^]...[/^^]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '^^', '^^');">Sup</button>
-    <button type="button" title="[%%]...[/%%]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '%%', '%%');">Sub</button>
-    <button type="button" title="[flash]...[/flash]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '[flash]', '[/flash]');">Flash</button>
-    <button type="button" title="[**]...[/**]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '**', '**');">Spoiler</button>
-    <button type="button" title="[--]...[/--]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '--', '--');">Small</button>
-    <button type="button" title="[##]...[/##]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '##', '##');">Big</button>
-    <button type="button" title="[^r]...[/^r]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '^r', '^r');">Red</button>
-    <button type="button" title="[^b]...[/^b]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '^b', '^b');">Blue</button>
-    <button type="button" title="[^o]...[/^o]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '^o', '^o');">Orange</button>
-    <button type="button" title="[^c]...[/^c]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '^c', '^c');">Cyan</button>
-    <button type="button" title="[^p]...[/^p]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '^p', '^p');">Purple</button>
-    <button type="button" title="[^t]...[/^t]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '^t', '^t');">Brown</button>
-    <button type="button" title="[candy]...[/candy]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '[candy]', '[/candy]');">Candy</button>
-    <button type="button" title="[meme]...[/meme]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '[meme]', '[/meme]');">Meme</button>
-    <button type="button" title="[autism]...[/autism]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '[autism]', '[/autism]');">Autism</button>
-    <button type="button" title="[aa]...[/aa]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '[aa]', '[/aa]');">ASCII</button>
-    <button type="button" title="[aa-s]...[/aa-s]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '[aa-s]', '[/aa-s]');">ASCIIs</button>
-    <button type="button" title="[aa-xs]...[/aa-xs]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '[aa-xs]', '[/aa-xs]');">ASCIIxs</button>
-    <button type="button" title="[identity]...[/identity]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '[identity]', '[/identity]');">Ident</button>
-    <button type="button" title="[center]...[/center]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '[center]', '[/center]');">Center</button>
-    <button type="button" title="[back]...[/back]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '[back]', '[/back]');">Back</button>
-    <button type="button" title="[kern]...[/kern]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '[kern]', '[/kern]');">Kerning</button>
-    <button type="button" title="[caps]...[/caps]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '[caps]', '[/caps]');">Caps</button>
-    <button type="button" title="[rot=0-360]...[/rot]" onclick="javascript:lbc('body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '[rot=]', '[/rot]');">Rot</button>
+    <button type="button" title="@@...@@" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '@@', '@@');">Bold</button>
+    <button type="button" title="~~...~~" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '~~', '~~');">Italic</button>
+    <button type="button" title="__...__" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '__', '__');">Underline</button>
+    <button type="button" title="^s...^s" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '^s', '^s');">Shadow</button>
+    <button type="button" title="++...++" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '++', '++');">Strike</button>
+    <button type="button" title="``...``" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '``', '``');">Mark</button>
+    <button type="button" title="^^...^^" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '^^', '^^');">Sup</button>
+    <button type="button" title="%%...%%" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '%%', '%%');">Sub</button>
+    <button type="button" title="[flash]...[/flash]" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '[flash]', '[/flash]');">Flash</button>
+    <button type="button" title="**...**" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '**', '**');">Spoiler</button>
+    <button type="button" title="--...--" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '--', '--');">Small</button>
+    <button type="button" title="##...##" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '##', '##');">Big</button>
+    <button type="button" title="^r...^r" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '^r', '^r');">Red</button>
+    <button type="button" title="^b...^b" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '^b', '^b');">Blue</button>
+    <button type="button" title="^o...^o" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '^o', '^o');">Orange</button>
+    <button type="button" title="^c...^c" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '^c', '^c');">Cyan</button>
+    <button type="button" title="^p...^p" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '^p', '^p');">Purple</button>
+    <button type="button" title="^t...^t" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '^t', '^t');">Brown</button>
+    <button type="button" title="[candy]...[/candy]" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '[candy]', '[/candy]');">Candy</button>
+    <button type="button" title="[meme]...[/meme]" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '[meme]', '[/meme]');">Meme</button>
+    <button type="button" title="[autism]...[/autism]" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '[autism]', '[/autism]');">Autism</button>
+    <button type="button" title="[aa]...[/aa]" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '[aa]', '[/aa]');">ASCII</button>
+    <button type="button" title="[aa-s]...[/aa-s]" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '[aa-s]', '[/aa-s]');">ASCIIs</button>
+    <button type="button" title="[aa-xs]...[/aa-xs]" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '[aa-xs]', '[/aa-xs]');">ASCIIxs</button>
+    <button type="button" title="[identity]...[/identity]" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '[identity]', '[/identity]');">Ident</button>
+    <button type="button" title="[center]...[/center]" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '[center]', '[/center]');">Center</button>
+    <button type="button" title="[back]...[/back]" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '[back]', '[/back]');">Back</button>
+    <button type="button" title="[kern]...[/kern]" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '[kern]', '[/kern]');">Kerning</button>
+    <button type="button" title="[caps]...[/caps]" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '[caps]', '[/caps]');">Caps</button>
+    <button type="button" title="[rot=0-360]...[/rot]" onclick="javascript:lbc('post_body{% if is_reply %}_reply{% endif %}{% if is_popup %}_popup{% endif %}', '[rot=]', '[/rot]');">Rot</button>
 </div>
