--- a/templates/elements/board/post_form_reply_popup.html
+++ b/templates/elements/board/post_form_reply_popup.html
@@ -120,7 +120,7 @@
         <tr>
           <td class="form themed bold">Comment</td>
           <td colspan="2">
-            <textarea rows="7" maxlength="246250" class="form" style="width: 100%; box-sizing: border-box;" id="body_reply_popup" name="body">{% if "comment" in form_populate and form_populate["comment"] %}{{form_populate["comment"]}}{% endif %}</textarea>
+            <textarea rows="7" maxlength="246250" class="form" style="width: 100%; box-sizing: border-box;" id="post_body_reply_popup" name="body">{% if "comment" in form_populate and form_populate["comment"] %}{{form_populate["comment"]}}{% endif %}</textarea>
           </td>
         </tr>
         <tr>
